--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
   <main>
     <section id="topo">
       <div>
-        <ul>
-          <li><a href="#">Flight</a></li>
-          <li><a href="#">Hotel</a></li>
-          <li><a href="#">Rental</a></li>
-        </ul>
+        <nav>
+          <ul>
+            <li><a href="#">Flight</a></li>
+            <li><a href="#">Hotel</a></li>
+            <li><a href="#">Rental</a></li>
+          </ul>
+        </nav>
         <p>Travel the world with us</p>
         <section>
-          <div id="escolha-local">
-            <label for="from">From</label>
-            <input type="text" name="from" id="from" placeholder="Departing from">
-            <label for="to">To</label>
-            <input type="text" name="to" id="to" placeholder="Arriving at">
-          </div>
+          <article>
+            <div class="escolha-local">
+              <label for="from">From</label>
+              <input type="text" name="from" id="from" placeholder="Departing from">
+            </div>
+            <div class="escolha-local">
+              <label for="to">To</label>
+              <input type="text" name="to" id="to" placeholder="Arriving at">
+            </div>
+          </article>
           <input type="submit" value="Search and find dates" id="confirma-local">
         </section>
       </div>
