--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/aaa47c56ef.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
   <header>
-    <div id="logo">
-      <a href="#"><i class='fas'>&#xf3c5;</i>Logo</a>
+    <div class="header-top">
+      <a href="#" id="logo"><i class='fas'>&#xf3c5;</i>Logo</a>
     </div>
-    <div id="lupa">
-      <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+    <div class="header-top">
+      <a href="#"><i class="fa-solid fa-magnifying-glass" id="lupa"></i></a>
     </div>
   </header>
   <main>
@@ -21,13 +22,13 @@
       <div>
         <nav>
           <ul>
-            <li><a href="#">Flight</a></li>
-            <li><a href="#">Hotel</a></li>
-            <li><a href="#">Rental</a></li>
+            <li><a href="#"><svg id="plane" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M482.3 192c34.2 0 93.7 29 93.7 64c0 36-59.5 64-93.7 64l-116.6 0L265.2 495.9c-5.7 10-16.3 16.1-27.8 16.1l-56.2 0c-10.6 0-18.3-10.2-15.4-20.4l49-171.6L112 320 68.8 377.6c-3 4-7.8 6.4-12.8 6.4l-42 0c-7.8 0-14-6.3-14-14c0-1.3 .2-2.6 .5-3.9L32 256 .5 145.9c-.4-1.3-.5-2.6-.5-3.9c0-7.8 6.3-14 14-14l42 0c5 0 9.8 2.4 12.8 6.4L112 192l102.9 0-49-171.6C162.9 10.2 170.6 0 181.2 0l56.2 0c11.5 0 22.1 6.2 27.8 16.1L365.7 192l116.6 0z"/></svg>Flight</a></li>
+            <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M32 32c17.7 0 32 14.3 32 32V320H288V160c0-17.7 14.3-32 32-32H544c53 0 96 43 96 96V448c0 17.7-14.3 32-32 32s-32-14.3-32-32V416H352 320 64v32c0 17.7-14.3 32-32 32s-32-14.3-32-32V64C0 46.3 14.3 32 32 32zm144 96a80 80 0 1 1 0 160 80 80 0 1 1 0-160z"/></svg>Hotel</a></li>
+            <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M135.2 117.4L109.1 192H402.9l-26.1-74.6C372.3 104.6 360.2 96 346.6 96H165.4c-13.6 0-25.7 8.6-30.2 21.4zM39.6 196.8L74.8 96.3C88.3 57.8 124.6 32 165.4 32H346.6c40.8 0 77.1 25.8 90.6 64.3l35.2 100.5c23.2 9.6 39.6 32.5 39.6 59.2V400v48c0 17.7-14.3 32-32 32H448c-17.7 0-32-14.3-32-32V400H96v48c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V400 256c0-26.7 16.4-49.6 39.6-59.2zM128 288a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm288 32a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>Rental</a></li>
           </ul>
         </nav>
-        <p>Travel the world with us</p>
-        <section>
+        <section id="input-local">
+          <p>Travel the world with us</p>
           <article>
             <div class="escolha-local">
               <label for="from">From</label>
@@ -86,7 +87,37 @@
         </section>
       </article>
     </section>
+    <section id="ofertas">
+      <div>
+        <h3>Het the best offers first!</h3>
+        <p>join our newsletter</p>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email" placeholder="Your Email address">
+        <input type="button" value="Subscribe">
+      </div>
+    </section>
+    <section id="contato">
+      <h3>Contact</h3>
+      <p>Let us book your next trip!</p>
+      <ul>
+        <li>Chicago, US</li>
+        <li>Phone +00 151515</li>
+        <li>Email: mail@gmail.com</li>
+      </ul>
+      <form action="" method="post">
+        <input type="text" name="txt" id="txt">
+        <input type="email" name="mail" id="mail">
+        <input type="text" name="msg" id="msg">
+        <input type="button" value="SEND MESSAGE">
+      </form>
+    </section>
   </main>
-  
+  <footer>
+    <p>Find Us On</p>
+    <div id="icon-footer">
+      
+    </div>
+    <p>Powered by <a href="#">w3.css</a></p>
+  </footer>
 </body>
 </html>
