--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </section>
       </div>
     </section>
+    <!--Section 2-->
     <section class="container">
       <article class="conteudo">
         <h1>Good Offers Rgth Now</h1>
@@ -64,7 +65,7 @@
       </article>
     </section>
     <section class="container">
-      <article class="conteudo">
+      <article id="conteudo">
         <h1>Explore Nature</h1>
         <p>Travel with us and see nature at its finest.</p>
         <section class="img-paisagem">
