--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <!--Section 2-->
     <section class="container">
-      <article class="conteudo">
+      <article id="conteudo">
         <h1>Good Offers Rgth Now</h1>
         <p>up to <strong>50%</strong> discount.</p>
         <div id="img1">
