--- a/index.html
+++ b/index.html
@@ -46,26 +46,36 @@
     <!--Section 2-->
     <section class="container">
       <article id="conteudo">
-        <h1>Good Offers Rgth Now</h1>
+        <h1>Good Offers Rigth Now</h1>
         <p>up to <strong>50%</strong> discount.</p>
-        <div id="img1">
-          <img src="imagens/cinqueterre.jpg" alt="Imagem de Cinque Terre">
-          <p>Cinque terre</p>
-        </div>
-        <div id="imgs">
-          <img src="imagens/newyork.jpg" alt="New York City">
-          <p>New York</p>
-          <img src="imagens/sanfran.jpg" alt="San Francisco City">
-          <p>San Francisco</p>
-          <img src="imagens/pisa.jpg" alt="Pisa City">
-          <p>Pisa</p>
-          <img src="imagens/paris.jpg" alt="Paris City">
-          <p>Paris</p>
-        </div>
+        <section id="agrupamento">
+          <div id="img1">
+            <img src="imagens/cinqueterre.jpg" alt="Imagem de Cinque Terre">
+            <p class="nome-local">Cinque Terre</p>
+          </div>
+          <div id="imgs">
+            <div>
+              <img src="imagens/newyork.jpg" alt="New York City">
+              <p class="nome-local">New York</p>
+            </div>
+            <div>
+              <img src="imagens/sanfran.jpg" alt="San Francisco City">
+              <p class="nome-local">San Francisco</p>
+            </div>
+            <div>
+              <img src="imagens/pisa.jpg" alt="Pisa City" class="padding">
+              <p class="nome-local">Pisa</p>
+            </div>
+            <div>
+              <img src="imagens/paris.jpg" alt="Paris City" class="padding">
+              <p class="nome-local">Paris</p>
+            </div>
+          </div>
+        </section>
       </article>
     </section>
     <section class="container">
-      <article id="conteudo">
+      <article id="conteudo2">
         <h1>Explore Nature</h1>
         <p>Travel with us and see nature at its finest.</p>
         <section class="img-paisagem">
