--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airplane</title>
+    <script src="https://kit.fontawesome.com/aaa47c56ef.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
-        
+        <a href="#"><i class="fa-sharp fa-solid fa-location-dot"></i>Logo</a>
+        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
     </header>
+    <section>
+        <div id="choose-location">
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-plane"></i>Fligth</a></li>
+                    <li><a href="#"><i class="fa-solid fa-bed"></i>Hotel</a></li>
+                    <li><a href="#"><i class="fa-solid fa-car"></i>Rental</a></li>
+                </ul>
+            </nav>
+            <div>
+                <form action="#" method="post">
+                    <h1>Travel the world with us</h1>
+                    <div>
+                        <div class="from-to">
+                            <label for="from">From</label>
+                            <input type="text" name="from" id="from">
+                        </div>
+                        <div class="from-to">
+                            <label for="to">To</label>
+                            <input type="text" name="from" id="from">
+                        </div>
+                    </div>
+                    <input type="button" value="Search and find dates">
+                </form>
+            </div>
+        </div>    
+    </section>
+    <main>
+        
+    </main>
 </body>
 </html>
