--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/aaa47c56ef.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/phone-l.css">
+    <link rel="stylesheet" href="estilos/tablet.css">
 </head>
 <body>
     <header>
@@ -45,28 +46,30 @@
         <section id="imgs">
             <h1>Good Offers Rigth Now</h1>
             <p>Up to <strong>50%</strong> discount.</p>
-            <div id="cinque">
-                <img src="imagens/cinqueterre.jpg" alt="Cinque Terre City" title="Cinque Terre City">
-                <p>Cinque Terre</p>
+            <div id="img-flex">
+                <div id="cinque">
+                    <img src="imagens/cinqueterre.jpg" alt="Cinque Terre City" title="Cinque Terre City">
+                    <p>Cinque Terre</p>
+                </div>
+                <section id="four-img">
+                    <div class="group-img">
+                        <img src="imagens/newyork.jpg" alt="New York City" title="New York City">
+                        <p>New York</p>
+                    </div>
+                    <div class="group-img">
+                        <img src="imagens/sanfran.jpg" alt="San Fracisco City" title="San Fracisco City">
+                        <p>San Francisco</p>
+                    </div>
+                    <div class="group-img">
+                        <img src="imagens/pisa.jpg" alt="Pisa City" title="Pisa City">
+                        <p>Pisa</p>
+                    </div>
+                    <div class="group-img">
+                        <img src="imagens/paris.jpg" alt="Paris City" title="Paris City">
+                        <p>Paris</p>
+                    </div>
+                </section>
             </div>
-            <section id="four-img">
-                <div class="group-img">
-                    <img src="imagens/newyork.jpg" alt="New York City" title="New York City">
-                    <p>New York</p>
-                </div>
-                <div class="group-img">
-                    <img src="imagens/sanfran.jpg" alt="San Fracisco City" title="San Fracisco City">
-                    <p>San Francisco</p>
-                </div>
-                <div class="group-img">
-                    <img src="imagens/pisa.jpg" alt="Pisa City" title="Pisa City">
-                    <p>Pisa</p>
-                </div>
-                <div class="group-img">
-                    <img src="imagens/paris.jpg" alt="Paris City" title="Paris City">
-                    <p>Paris</p>
-                </div>
-            </section>
         </section>
         
         <section id="explore">
