--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/phone-l.css">
     <link rel="stylesheet" href="estilos/tablet.css">
+    <link rel="stylesheet" href="estilos/big.css">
 </head>
 <body>
     <header>
@@ -76,14 +77,14 @@
             <h1>Explore Nature</h1>
             <p>Travel with us and see nature at its finest.</p>
             <section id="landscape">
-                <div class="nature">
+                <div class="nature" id="ocean">
                     <img src="imagens/ocean.jpg" alt="Ocean" title="Ocean">
                     <h2>West Coast, Norway</h2>
                     <p class="color-p">Roundtrip from $79</p>
                     <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                     <input type="button" value="Buy Tickets" name="ticket" id="ticket">
                 </div>
-                <div class="nature">
+                <div class="nature" id="mountain">
                     <img src="imagens/mountains.jpg" alt="Mountains" title="Mountains">
                     <h2>Mountains, Austria</h2>
                     <p class="color-p">One-way from $39</p>
